--- a/tasks.json
+++ b/tasks.json
@@ -8,9 +8,16 @@
     },
     {
         "id": 2,
-        "description": "Learning new stuff",
-        "status": "in-progress",
+        "description": "Learning new stuff and do practice",
+        "status": "done",
         "created_at": "2024-10-22T01:56:56.924268",
-        "updated_at": "2024-10-22T01:57:14.600974"
+        "updated_at": "2024-10-22T13:43:02.310012"
+    },
+    {
+        "id": 3,
+        "description": "Test task",
+        "status": "done",
+        "created_at": "2024-10-22T13:46:36.406273",
+        "updated_at": "2024-10-22T13:47:04.513118"
     }
 ]
